welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:2: error: value avance is not a member of Unit
avance();avance();avance();avance();gauche();avance();avance();droite();avance();avance();avance();avance();droite();avance();avance();gauche();avance();avance()avance();avance()
                                                                                                                                                                 ^